@startuml

title __FORCES's Class Diagram__\n

  namespace com.apetrei.engine {
    namespace physics {
      namespace forces {
        interface com.apetrei.engine.physics.forces.ForceGenerator {
            {abstract} + updateForce()
        }
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics {
      namespace forces {
        class com.apetrei.engine.physics.forces.ForceRegistration {
            + ForceRegistration()
            + equals()
        }
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics {
      namespace forces {
        class com.apetrei.engine.physics.forces.ForceRegistry {
            - registry : List<ForceRegistration>
            + ForceRegistry()
            + add()
            + clear()
            + remove()
            + updateForces()
            + zeroForces()
        }
      }
    }
  }
  

  com.apetrei.engine.physics.forces.ForceRegistration o-- com.apetrei.engine.physics.forces.ForceGenerator : fg
  com.apetrei.engine.physics.forces.ForceRegistration o-- com.apetrei.engine.physics.rigidbody.Rigidbody2D : rb


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
